--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Today</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <!-- Hero Section Start -->
+    <section class="hero-banner">
+        <div class="hero-content">
+            <h1>Let’s Help Those Who Are More In Need</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quod ullam magnam, iusto velid!</p>
+            <a class="btn btn-cta" href="#">Donate Now</a>
+        </div>
+    </section>
+    <!-- Hero Section End -->
 
 </body>
 
