donate item section added

--- a/index.html
+++ b/index.html
@@ -15,15 +15,56 @@
 </head>
 
 <body>
-    <!-- Hero Section Start -->
+    <!-- Hero Banner Section Start -->
     <section class="hero-banner">
         <div class="hero-content">
             <h1>Let’s Help Those Who Are More In Need</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quod ullam magnam, iusto velid!</p>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
             <a class="btn btn-cta" href="#">Donate Now</a>
         </div>
     </section>
-    <!-- Hero Section End -->
+    <!-- Hero Banner Section End -->
+    <!-- Donate Item Section Start -->
+    <section class="donate">
+        <div class="container">
+            <div class="section-heading">
+                <h1>Donate Today</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim</p>
+            </div>
+            <div class="donate-amount">
+                <div class="amount">
+                    <h2>100tk</h2>
+                </div>
+                <div class="amount active">
+                    <h2>200tk</h2>
+                </div>
+                <div class="amount">
+                    <h2>500tk</h2>
+                </div>
+                <div class="amount">
+                    <h2>1000tk</h2>
+                </div>
+                <div class="amount">
+                    <h2>5000tk</h2>
+                </div>
+            </div>
+            <div class="custom-amount">
+                <form action="">
+                    <input type="text" placeholder="Other Amount (Taka)">
+                </form>
+            </div>
+            <div class="donate-button">
+                <a class="btn" href="#">Donate Now</a>
+            </div>
+        </div>
+
+    </section>
+    <!-- Donate Item Section End -->
+
+
+
 
 </body>
 
