donate section added

--- a/index.html
+++ b/index.html
@@ -62,6 +62,44 @@
 
     </section>
     <!-- Donate Item Section End -->
+    <!-- Donate Plan Section Start -->
+    <section class="donate-plan">
+        <div class="container">
+            <div class="section-heading">
+                <h1>Our Donate Plan</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim</p>
+            </div>
+            <div class="plan-item">
+                <div class="single-item">
+                    <img src="/icons/food.png" alt="Food">
+                    <h3>Food for a family</h3>
+                    <p>Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+                <div class="single-item">
+                    <img src="/icons/shelter.png" alt="Shelter">
+                    <h3>Shelter for a family</h3>
+                    <p>Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+                <div class="single-item">
+                    <img src="/icons/Frame-1.png" alt="Education">
+                    <h3>Education for a child</h3>
+                    <p>Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- Donate Plan Section End -->
 
 
 
