newsletter & footer added

--- a/index.html
+++ b/index.html
@@ -100,6 +100,30 @@
 
     </section>
     <!-- Donate Plan Section End -->
+    <!-- Newsletter Section Start -->
+    <section class="newsletter">
+        <div class="container">
+            <div class="section-heading">
+                <h1>Get My Updates</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim</p>
+            </div>
+            <div class="subscribe">
+                <form class="subscribe-form" action="">
+                    <input class="email-input" type="email" name="email" id="email" placeholder="Email">
+                    <input class="submit-button" type="submit" value="Subscribe">
+                </form>
+
+            </div>
+        </div>
+    </section>
+    <!-- Newsletter Section End -->
+    <!-- Footer Start-->
+    <footer>
+        <h2>Help Needy People</h2>
+        <p>Share Your Love</p>
+    </footer>
+    <!-- Footer End -->
 
 
 
