--- a/index.html
+++ b/index.html
@@ -100,6 +100,43 @@
 
     </section>
     <!-- Donate Plan Section End -->
+    <!-- Blog Section Start -->
+    <section class="blog">
+        <div class="container">
+            <div class="section-heading">
+                <h1>Check Our News</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim</p>
+            </div>
+            <div class="blogs">
+                <div class="single-blog">
+                    <h3>Lorem ipsum dolor</h3>
+                    <p>17 March 2021</p>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo
+                        populo
+                        animal noluisse, enim...</p>
+                    <a href="#">Read More</a>
+                </div>
+                <div class="single-blog">
+                    <h3>Lorem ipsum dolor</h3>
+                    <p>17 March 2021</p>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo
+                        populo
+                        animal noluisse, enim...</p>
+                    <a href="#">Read More</a>
+                </div>
+                <div class="single-blog">
+                    <h3>Lorem ipsum dolor</h3>
+                    <p>17 March 2021</p>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo
+                        populo
+                        animal noluisse, enim...</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Blog Section End -->
     <!-- Newsletter Section Start -->
     <section class="newsletter">
         <div class="container">
@@ -113,7 +150,6 @@
                     <input class="email-input" type="email" name="email" id="email" placeholder="Email">
                     <input class="submit-button" type="submit" value="Subscribe">
                 </form>
-
             </div>
         </div>
     </section>
@@ -124,9 +160,6 @@
         <p>Share Your Love</p>
     </footer>
     <!-- Footer End -->
-
-
-
 
 </body>
 
