--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="plan-item">
                 <div class="single-item">
-                    <img src="/icons/food.png" alt="Food">
+                    <img src="./icons/food.png" alt="Food">
                     <h3>Food for a family</h3>
                     <p>Amet minim mollit non deserunt
                         ullamco est sit aliqua dolor do amet
@@ -80,7 +80,7 @@
                         velit mollit.</p>
                 </div>
                 <div class="single-item">
-                    <img src="/icons/shelter.png" alt="Shelter">
+                    <img src="./icons/shelter.png" alt="Shelter">
                     <h3>Shelter for a family</h3>
                     <p>Amet minim mollit non deserunt
                         ullamco est sit aliqua dolor do amet
@@ -88,7 +88,7 @@
                         velit mollit.</p>
                 </div>
                 <div class="single-item">
-                    <img src="/icons/Frame-1.png" alt="Education">
+                    <img src="./icons/Frame-1.png" alt="Education">
                     <h3>Education for a child</h3>
                     <p>Amet minim mollit non deserunt
                         ullamco est sit aliqua dolor do amet
